--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
       <div class="item">1</div>
       <div class="item">2</div>
       <div class="item">3</div>
-
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
     </div>
     <div class="flex center container">
       <div class="item">1</div>
@@ -39,7 +47,15 @@
       <div class="item">1</div>
       <div class="item">2</div>
       <div class="item">3</div>
-
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
     </div>
     <div class="flex around container">
       <div class="big item">1</div>
@@ -51,9 +67,26 @@
       <div class="item">1</div>
       <div class="item">2</div>
       <div class="item">3</div>
-
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
     </div>
     <div class="flex between container">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
       <div class="item">1</div>
       <div class="item">2</div>
       <div class="item">3</div>
